epserde/tests/fail/lifetime.stderr
error: Lifetime generics are not supported
  --> tests/fail/lifetime.rs:10:13
   |
10 | struct Data<'a>(std::marker::PhantomData<&'a ()>);
   |             ^^
